--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -87,6 +87,9 @@
       "noInternetMessageOnLoginAttempt": "You tried to login but you don't have internet connection. Please connect to the internet and try again.",
        "noInternetConnection": "No Internet Connection",
         "youAreCurrentlyOfflineMessage": "You are currently offline. Please check your internet connection.",
-        "backToInternetConnection": "You are back online"
+        "backToInternetConnection": "You are back online",
+      "findYourTherapistButton": "Find your therapist",
+      "applyAsTherapistButton": "Apply as therapist"
+
 
 }
