--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -103,7 +103,15 @@
         "negativeAspectsDescription": "What you don't want your therapist bring or treat",
          "positiveAspectsTitle": "Positive aspects",
               "positiveAspectsDescription": "What you expect your therapist to treat",
-              "notFound": "Not found"
+              "notFound": "Not found.",
+
+                "candidateBlockedDueToSafetyMessage": "Inappropriate language was detected in your request and we couldn't process it. Please try again. If you believe this is a mistake, please contact us.",
+                "noCandidatesMessage": "There was an error trying to process your request. We have reported the issue. Please try again later.",
+                "noTextFoundInResponseMessage": "There was an error trying to process your request. We have reported the issue. Please try again later.",
+                "noJsonFoundInResponseTextMessage": "There was an error trying to process your request. We have reported the issue. Please try again later.",
+                "generativeAiErrorMessage": "An error occurred while trying to process your request. We have reported the issue. Please try again later.",
+                "unknownErrorMessage": "An error occurred while trying to process your request. We have reported the issue. Please try again later."
+
 
 
 }
