--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -101,5 +101,14 @@
           "negativeAspectsDescription": "Lo que no deseas que trate u ofrezca tu terapeuta",
           "positiveAspectsTitle": "Aspectos Positivos",
           "positiveAspectsDescription": "Lo que deseas que ofrezca tu terapeuta",
-          "notFound": "Nicht gefunden"
+          "notFound": "No se encontraron.",
+
+            "candidateBlockedDueToSafetyMessage": "Se ha detectado lenguaje no apropiado en su solicitud y no hemos podido procesarla. Por favor, inténtelo nuevamente. Si cree que esto se trata de un error, por favor contáctenos.",
+            "noCandidatesMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
+            "noTextFoundInResponseMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
+            "noJsonFoundInResponseTextMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
+            "generativeAiErrorMessage": "Ocurrió un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
+            "unknownErrorMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde."
+
+
 }
