--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -102,6 +102,7 @@
             "positiveAspectsTitle": "Positive Aspekte",
             "positiveAspectsDescription": "Was Sie von Ihrem Therapeuten erwarten",
             "notFound": "Nicht gefunden.",
+            "ohNoSomethingWentWrong": "Oh nein, etwas ist schief gelaufen!",
           "candidateBlockedDueToSafetyMessage": "Es wurde unangemessene Sprache in Ihrer Anfrage erkannt und wir konnten sie nicht verarbeiten. Bitte versuchen Sie es erneut. Wenn Sie glauben, dass dies ein Fehler ist, kontaktieren Sie uns bitte.",
           "noCandidatesMessage": "Es gab einen Fehler beim Versuch, Ihre Anfrage zu verarbeiten. Wir haben das Problem gemeldet. Bitte versuchen Sie es später erneut.",
           "noTextFoundInResponseMessage": "Es gab einen Fehler beim Versuch, Ihre Anfrage zu verarbeiten. Wir haben das Problem gemeldet. Bitte versuchen Sie es später erneut.",
