--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -102,7 +102,7 @@
           "positiveAspectsTitle": "Aspectos Positivos",
           "positiveAspectsDescription": "Lo que deseas que ofrezca tu terapeuta",
           "notFound": "No se encontraron.",
-
+    "ohNoSomethingWentWrong": "Oh no, algo salió mal!",
             "candidateBlockedDueToSafetyMessage": "Se ha detectado lenguaje no apropiado en su solicitud y no hemos podido procesarla. Por favor, inténtelo nuevamente. Si cree que esto se trata de un error, por favor contáctenos.",
             "noCandidatesMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
             "noTextFoundInResponseMessage": "Hubo un error al intentar procesar su solicitud. Hemos reportado el problema. Por favor, inténtelo nuevamente más tarde.",
