--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -115,7 +115,8 @@
            "languages": "Languages",
               "intro": "Intro",
                 "score": "Score",
-                "professionalCertificates": "Professional Certificates"
+                "professionalCertificates": "Professional Certificates",
+                   "contactMeButton": "Contact me"
 
 
 
