--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -112,7 +112,8 @@
     "languages": "Idiomas",
     "intro": "Intro",
     "score": "Valoración",
-    "professionalCertificates": "Certificados"
+    "professionalCertificates": "Certificados",
+      "contactMeButton": "Contactar"
 
 
 
