--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -113,7 +113,8 @@
            "Intro": "Intro",
 
              "score": "Bewertung",
-           "professionalCertificates": "Berufszertifikate"
+           "professionalCertificates": "Berufszertifikate",
+           "contactMeButton": "Kontaktiere mich"
 
 
 
