--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -114,7 +114,7 @@
 
              "score": "Bewertung",
            "professionalCertificates": "Berufszertifikate",
-           "contactMeButton": "Kontaktiere mich",
+           "messageMeButton": "Nachricht senden",
             "settingsScreenTitle": "Einstellungen",
             "changeLanguageButton": "Sprache ändern",
             "remote": "Remote",
