--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -116,7 +116,7 @@
               "therapistAboutMe": "About me",
                 "score": "Score",
                 "professionalCertificates": "Professional Certificates",
-                   "contactMeButton": "Contact me",
+                   "messageMeButton": "Message me",
                     "settingsScreenTitle": "Settings",
                      "changeLanguageButton": "Change language",
                      "remote": "Remote",
