--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -113,7 +113,7 @@
    "therapistAboutMe": "Sobre mí",
     "score": "Valoración",
     "professionalCertificates": "Certificados",
-      "contactMeButton": "Contactar",
+      "messageMeButton": "Envíame un mensaje",
       "settingsScreenTitle": "Configuraciones",
        "changeLanguageButton": "Cambiar Idioma",
        "remote": "Remoto",
