Theme colors adjusted

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -119,5 +119,6 @@
             "changeLanguageButton": "Sprache ändern",
             "remote": "Remote",
             "presential": "Präsent",
-            "meetingType": "Treffen"
+            "meetingType": "Treffen",
+            "allTherapists": "Alle Therapeuten"
 }
