--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -121,7 +121,8 @@
                      "changeLanguageButton": "Change language",
                      "remote": "Remote",
                      "presential": "Presential",
-                     "meetingType": "Meeting type"
+                     "meetingType": "Meeting type",
+                     "allTherapists": "All therapists"
 
 
 
