--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -118,7 +118,8 @@
        "changeLanguageButton": "Cambiar Idioma",
        "remote": "Remoto",
        "presential": "Presencial",
-       "meetingType": "Modalidad de Encuentro"
+       "meetingType": "Modalidad de Encuentro",
+       "allTherapists": "Todos los terapeutas"
 
 
 
