--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -32,8 +32,7 @@
   "signingInWithGoogleSnackbarMessage": "Iniciando sesión con Google...",
    "errorSigningInWithGoogleSnackbarMessage": "Hubo un error al iniciar sesión con Google. Por favor, inténtelo de nuevo o contacte con el soporte.",
      "homeScreenTitle": "Pantalla Principal",
-     "exampleTitle": "Título de Ejemplo",
-     "exampleDescription": "Esta es una descripción creativa de ejemplo para la pantalla principal. Siéntete libre de modificarla.",
+
      "buttonsSectionTitle": "Botones",
      "elevatedButtonLabel": "Botón Elevado",
      "textButtonLabel": "Botón de Texto",
@@ -93,10 +92,11 @@
           "youAreCurrentlyOfflineMessage": "Actualmente estás sin conexión a Internet.",
           "backToInternetConnection": "Estás de vuelta en línea",
           "findYourTherapistButton": "Encuentra tu terapeuta",
-          "applyAsTherapistButton": "Aplicar como terapeuta",
+          "registerAsTherapistButton": "Registrarse como terapeuta",
           "welcomeToPrefix": "Bienvenido a ",
-          "tellUsWhatYouAreLookingFor": "Cuéntanos qué estás buscando",
-          "requestTextFieldHintText": "Escribe tu solicitud aquí. Proporciona tanta información como sea posible.",
+          "tellUsWhatYouAreLookingFor": "Cuéntanos qué estás buscando (Describe los problemas que estés enfrentando y tus preferencias en detalle):",
+
+          "requestTextFieldHintText": "Escribe tu solicitud aquí - Proporciona tanta información como sea posible sobre tus necesidades, desafíos y lo que buscas en un terapeuta.  \n\np.ej:   \nHola, soy una persona de 32 años que busca un terapeuta que pueda relacionarse con mis experiencias y brindar terapia culturalmente sensible. He enfrentado dificultades con la ansiedad, baja autoestima y últimamente me ha sido difícil socializar. Necesito a alguien que se especialice en Terapia Cognitivo-Conductual, y que tenga conocimientos en astrología sería un plus. Preferiría un terapeuta de color y...",
            "negativeAspectsTitle": "Aspectos Negativos",
           "negativeAspectsDescription": "Lo que no deseas que trate u ofrezca tu terapeuta",
           "positiveAspectsTitle": "Aspectos Positivos",
