--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -32,8 +32,7 @@
   "signingInWithGoogleSnackbarMessage": "Anmeldung mit Google...",
   "errorSigningInWithGoogleSnackbarMessage": "Es gab einen Fehler bei der Anmeldung mit Google. Bitte versuchen Sie es erneut oder kontaktieren Sie den Support.",
    "homeScreenTitle": "Startbildschirm",
-    "exampleTitle": "Beispieltitel",
-    "exampleDescription": "Dies ist eine kreative Beispielbeschreibung für den Startbildschirm. Fühlen Sie sich frei, es zu ändern.",
+
     "buttonsSectionTitle": "Tasten",
     "elevatedButtonLabel": "Erhöhte Taste",
     "textButtonLabel": "Text Taste",
@@ -92,11 +91,14 @@
         "noInternetConnection": "Keine Internetverbindung",
         "youAreCurrentlyOfflineMessage": "Sie sind derzeit offline. Bitte überprüfen Sie Ihre Internetverbindung.",
          "backToInternetConnection": "Sie sind wieder online",
+
+          "welcomeScreenSubtitleDescription": "Dein AI-Partner, der dir hilft, den richtigen Therapeuten für dich und deine spezifischen Bedürfnisse zu finden, egal wo auf der Welt!",
           "findYourTherapistButton": "Finde deinen Therapeuten",
-         "applyAsTherapistButton": "Als Therapeut bewerben",
+         "registerAsTherapistButton": "Als Therapeut registrieren",
          "welcomeToPrefix": "Willkommen bei ",
-           "tellUsWhatYouAreLookingFor": "Sag uns, wonach du suchst",
-             "requestTextFieldHintText": "Geben Sie hier Ihre Anfrage ein. Geben Sie uns so viele Informationen wie möglich.",
+           "tellUsWhatYouAreLookingFor": "Sag uns, wonach du suchst (Beschreibe deine Probleme und Vorlieben im Detail):",
+
+             "requestTextFieldHintText": "Geben Sie hier Ihre Anfrage ein - Geben Sie so viele Informationen wie möglich über Ihre Bedürfnisse, Herausforderungen und was Sie von einem Therapeuten erwarten.   \n  \nz.B.:\nHallo, ich bin eine 32-jährige Person und suche einen Therapeuten, der meine Erfahrungen nachvollziehen kann und kulturell sensible Therapie anbietet. Ich habe Schwierigkeiten mit Angstzuständen, geringem Selbstwertgefühl und finde es in letzter Zeit schwer, Kontakte zu knüpfen. Ich brauche jemanden, der auf kognitive Verhaltenstherapie spezialisiert ist, und Kenntnisse in Astrologie wären ein Plus. Ich würde einen farbigen Therapeuten bevorzugen und... ",
          "negativeAspectsTitle": "Negative Aspekte",
             "negativeAspectsDescription": "Was Sie nicht möchten, dass Ihr Therapeut mitbringt oder behandelt",
             "positiveAspectsTitle": "Positive Aspekte",
