--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -97,7 +97,9 @@
       "welcomeToPrefix": "Welcome to ",
        "tellUsWhatYouAreLookingFor": "Tell us what you are looking for (Describe your issues and preferences in detail):",
        "requestTextFieldHintText": "Enter your request here - Provide as much information as possible about your needs, challenges, and what you're looking for in a therapist.   \n\ne.g.:  \nHello, I am a 32-year-old individual looking for a therapist who can relate to my experiences and provide culturally sensitive therapy. I have faced difficulties with anxiety, low self-esteem, and have been finding it hard to socialize lately. I need someone who specializes in Cognitive Behavioral Therapy, and knowledge in astrology would be a plus. I would prefer a therapist of color and...",
-
+       "redoRequestButton": "Redo request",
+       "findMyTherapistButton": "Find my therapist",
+       "seeResultsButton": "See results",
      "negativeAspectsTitle": "Negative aspects",
 
         "negativeAspectsDescription": "What you don't want your therapist bring or treat",
