--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -99,6 +99,10 @@
            "tellUsWhatYouAreLookingFor": "Sag uns, wonach du suchst (Beschreibe deine Probleme und Vorlieben im Detail):",
 
              "requestTextFieldHintText": "Geben Sie hier Ihre Anfrage ein - Geben Sie so viele Informationen wie möglich über Ihre Bedürfnisse, Herausforderungen und was Sie von einem Therapeuten erwarten.   \n  \nz.B.:\nHallo, ich bin eine 32-jährige Person und suche einen Therapeuten, der meine Erfahrungen nachvollziehen kann und kulturell sensible Therapie anbietet. Ich habe Schwierigkeiten mit Angstzuständen, geringem Selbstwertgefühl und finde es in letzter Zeit schwer, Kontakte zu knüpfen. Ich brauche jemanden, der auf kognitive Verhaltenstherapie spezialisiert ist, und Kenntnisse in Astrologie wären ein Plus. Ich würde einen farbigen Therapeuten bevorzugen und... ",
+
+                "redoRequestButton": "Anfrage wiederholen",
+                "findMyTherapistButton": "Finde meinen Therapeuten",
+                "seeResultsButton": "Ergebnisse anzeigen",
          "negativeAspectsTitle": "Negative Aspekte",
             "negativeAspectsDescription": "Was Sie nicht möchten, dass Ihr Therapeut mitbringt oder behandelt",
             "positiveAspectsTitle": "Positive Aspekte",
