--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -96,10 +96,17 @@
           "findYourTherapistButton": "Finde deinen Therapeuten",
          "registerAsTherapistButton": "Als Therapeut registrieren",
          "welcomeToPrefix": "Willkommen bei ",
+         "aspectsDetectedByAi": "Aspekte, die von AI erkannt wurden:",
+         "matchedTherapists": "Matched Therapeuten:",
+         "userProfile": "Benutzerprofil",
+            "therapistProfile": "Therapeutenprofil",
+         "yourRequest": "Ihre Anfrage",
            "tellUsWhatYouAreLookingFor": "Sag uns, wonach du suchst (Beschreibe deine Probleme und Vorlieben im Detail):",
 
-             "requestTextFieldHintText": "Geben Sie hier Ihre Anfrage ein - Geben Sie so viele Informationen wie möglich über Ihre Bedürfnisse, Herausforderungen und was Sie von einem Therapeuten erwarten.   \n  \nz.B.:\nHallo, ich bin eine 32-jährige Person und suche einen Therapeuten, der meine Erfahrungen nachvollziehen kann und kulturell sensible Therapie anbietet. Ich habe Schwierigkeiten mit Angstzuständen, geringem Selbstwertgefühl und finde es in letzter Zeit schwer, Kontakte zu knüpfen. Ich brauche jemanden, der auf kognitive Verhaltenstherapie spezialisiert ist, und Kenntnisse in Astrologie wären ein Plus. Ich würde einen farbigen Therapeuten bevorzugen und... ",
-
+             "requestTextFieldHintText": "Geben Sie hier Ihre Anfrage ein - Geben Sie so viele Informationen wie möglich über Ihre Bedürfnisse, Herausforderungen und was Sie von einem Therapeuten erwarten.   \n  \nz.B.:\nHallo, ich bin eine 32-jährige Person und suche einen Therapeuten. Ich habe Schwierigkeiten mit Angstzuständen, geringem Selbstwertgefühl und finde es in letzter Zeit schwer, Kontakte zu knüpfen. Ich brauche jemanden, der auf kognitive Verhaltenstherapie spezialisiert ist. Ich würde einen farbigen Therapeuten bevorzugen und... ",
+           "meetingType": "Treffen",
+              "remote": "Remote",
+                "presential": "Präsent",
                 "redoRequestButton": "Anfrage wiederholen",
                 "findMyTherapistButton": "Finde meinen Therapeuten",
                 "seeResultsButton": "Ergebnisse anzeigen",
