--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -99,6 +99,7 @@
           "userProfile": "Perfil de usuario",
             "therapistProfile": "Perfil de terapeuta",
           "yourRequest": "Tu solicitud",
+          "theRequestInputShouldNotBeEmpty": "El cuadro del texto de solicitud no debe estar vacío.",
           "tellUsWhatYouAreLookingFor": "Cuéntanos qué estás buscando (Describe los problemas que estés enfrentando y tus preferencias en detalle):",
 
           "requestTextFieldHintText": "Escribe tu solicitud aquí - Proporciona tanta información como sea posible sobre tus necesidades, desafíos y lo que buscas en un terapeuta.  \n\np.ej:   \nHola, soy una persona de 32 años que busca un terapeuta que pueda relacionarse con mis experiencias y brindar terapia culturalmente sensible. He enfrentado dificultades con la ansiedad, baja autoestima y últimamente me ha sido difícil socializar. Necesito a alguien que se especialice en Terapia Cognitivo-Conductual, y que tenga conocimientos en astrología sería un plus. Preferiría un terapeuta de color y...",
