Dark Mode refactored

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -107,6 +107,7 @@
          "remote": "Remote",
             "presential": "Presential",
         "worldwide": "Worldwide",
+        "country": "Country",
        "redoRequestButton": "Redo request",
        "findMyTherapistButton": "Find my therapist",
        "seeResultsButton": "See results",
