--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -107,6 +107,7 @@
             "remote": "Remoto",
             "presential": "Presencial",
             "worldwide": "Todo el mundo",
+            "country": "País",
            "negativeAspectsTitle": "Aspectos Negativos",
           "negativeAspectsDescription": "Lo que no deseas que trate u ofrezca tu terapeuta",
           "positiveAspectsTitle": "Aspectos Positivos",
