--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -102,6 +102,7 @@
          "matchedTherapists": "Matched Therapeuten:",
          "userProfile": "Benutzerprofil",
             "therapistProfile": "Therapeutenprofil",
+            "location": "Ort",
          "yourRequest": "Ihre Anfrage",
            "tellUsWhatYouAreLookingFor": "Sag uns, wonach du suchst (Beschreibe deine Probleme und Vorlieben im Detail):",
               "theRequestInputShouldNotBeEmpty": "Die Eingabe sollte nicht leer sein.",
@@ -109,6 +110,7 @@
            "meetingType": "Treffen",
               "country": "Land",
                  "worldwide": "Weltweit",
+                 "selectACountry": "Wählen Sie ein Land",
                 "redoRequestButton": "Anfrage wiederholen",
                 "findMyTherapistButton": "Finde meinen Therapeuten",
                 "seeResultsButton": "Ergebnisse anzeigen",
