--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -111,7 +111,10 @@
             "remote": "Remoto",
             "presential": "Presencial",
             "worldwide": "Todo el mundo",
+            "all": "Todos",
             "selectACountry": "Selecciona un país",
+            "selectAStateProvince": "Selecciona un estado/provincia",
+            "selectACity": "Selecciona una ciudad",
             "location": "Ubicación",
             "country": "País",
             "stateProvince": "Estado/Provincia",
