--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -111,8 +111,11 @@
              "requestTextFieldHintText": "Geben Sie hier Ihre Anfrage ein - Geben Sie so viele Informationen wie möglich über Ihre Bedürfnisse, Herausforderungen und was Sie von einem Therapeuten erwarten.   \n  \nz.B.:\nHallo, ich bin eine 32-jährige Person und suche einen Therapeuten. Ich habe Schwierigkeiten mit Angstzuständen, geringem Selbstwertgefühl und finde es in letzter Zeit schwer, Kontakte zu knüpfen. Ich brauche jemanden, der auf kognitive Verhaltenstherapie spezialisiert ist. Ich würde einen farbigen Therapeuten bevorzugen und... ",
            "meetingType": "Treffen",
               "country": "Land",
+              "all": "Alle",
                  "worldwide": "Weltweit",
                  "selectACountry": "Wählen Sie ein Land",
+                    "selectAStateProvince": "Wählen Sie ein Bundesland/Provinz",
+                    "selectACity": "Wählen Sie eine Stadt",
                 "redoRequestButton": "Anfrage wiederholen",
                 "findMyTherapistButton": "Finde meinen Therapeuten",
                 "seeResultsButton": "Ergebnisse anzeigen",
