--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -110,6 +110,9 @@
             "presential": "Presential",
         "worldwide": "Worldwide",
         "selectACountry": "Select a country",
+        "selectAStateProvince": "Select a state/province",
+        "selectACity": "Select a city",
+        "all": "All",
         "location": "Location",
         "country": "Country",
         "stateProvince": "State/Province",
