--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -116,6 +116,7 @@
                  "selectACountry": "Wählen Sie ein Land",
                     "selectAStateProvince": "Wählen Sie ein Bundesland/Provinz",
                     "selectACity": "Wählen Sie eine Stadt",
+                    "preferredLanguage": "Bevorzugte Sprache/n",
                 "redoRequestButton": "Anfrage wiederholen",
                 "findMyTherapistButton": "Finde meinen Therapeuten",
                 "seeResultsButton": "Ergebnisse anzeigen",
