--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -119,6 +119,7 @@
             "country": "País",
             "stateProvince": "Estado/Provincia",
             "city": "Ciudad",
+            "preferredLanguage": "Idioma/s preferido/s",
            "negativeAspectsTitle": "Aspectos Negativos",
           "negativeAspectsDescription": "Lo que no deseas que trate u ofrezca tu terapeuta",
           "positiveAspectsTitle": "Aspectos Positivos",
