--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -117,6 +117,10 @@
                     "selectAStateProvince": "Wählen Sie ein Bundesland/Provinz",
                     "selectACity": "Wählen Sie eine Stadt",
                     "preferredLanguage": "Bevorzugte Sprache/n",
+                       "selectPreferredLanguage": "Wählen Sie bevorzugte Sprache/n",
+                        "noTherapistsFound": "Keine Therapeuten gefunden",
+                       "noTherapistsFoundDescription": "Bitte versuchen Sie es erneut, indem Sie Ihre Anfrage ändern oder andere Filter auswählen.",
+                    "goToNextStep": "Zum nächsten Schritt gehen",
                 "redoRequestButton": "Anfrage wiederholen",
                 "findMyTherapistButton": "Finde meinen Therapeuten",
                 "seeResultsButton": "Ergebnisse anzeigen",
